update conventions docs for RichData instead of BasicData

--- a/docs/source/user_guide/Conventions.ipynb
+++ b/docs/source/user_guide/Conventions.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "both inherit from BasicData (in fact, just about every class in prysm does) which imbues them with a brevy of properties:"
+    "both inherit from RichData (in fact, just about every class in prysm does) which imbues them with a brevy of properties:"
    ]
   },
   {
@@ -60,8 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm._basicdata import BasicData\n",
-    "help(BasicData)"
+    "from prysm._richdata import RichData\n",
+    "help(RichData)"
    ]
   },
   {
@@ -77,7 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm import config"
+    "from prysm import config\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "outputs": [],
    "source": [
     "controlled_properties = [i for i in dir(config) if not i.startswith('_') and not i == 'initialized']\n",
-    "print(controlled_properties)"
+    "pprint(controlled_properties, width=1)"
    ]
   },
   {
@@ -105,13 +106,6 @@
    "source": [
     "# use 32-bit floats instead of 64-bit, ~50% speedup to all operations in exchange for accuracy\n",
     "config.precision = 32"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
    ]
   }
  ],
@@ -131,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
