--- a/docs/source/user_guide/Convolvables.ipynb
+++ b/docs/source/user_guide/Convolvables.ipynb
@@ -17,7 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm import Convolvable, Slit, Pinhole, TiltedSquare, SiemensStar, PixelAperture, OLPF"
+    "from prysm import Convolvable, Slit, Pinhole, TiltedSquare, SiemensStar, PixelAperture, OLPF\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -136,7 +138,7 @@
     "from prysm import sample_files\n",
     "c = Convolvable.from_file(sample_files('boat.png'), scale=5)  # plate scale in um -- 5microns/pixel\n",
     "c.data /= 255  # when initializing from files, normalization is left to the user\n",
-    "c.show()"
+    "c.plot2d()"
    ]
   },
   {
@@ -171,13 +173,6 @@
    "source": [
     "help(c.conv)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -196,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
