user's guide makeover

--- a/docs/source/user_guide/Convolvables.ipynb
+++ b/docs/source/user_guide/Convolvables.ipynb
@@ -122,9 +122,7 @@
    "source": [
     "which is less than 20 lines long.\n",
     "\n",
-    "Convolvable objects have a few convenience properties and methods. `slice_x` and its y variant exist and behave the same as slices on subclasses of `OpticalPhase` such as `Pupil` and `Interferogram`. `plot_slice_xy` also works the same way. `shape` is a convenience wrapper for `.data.shape`, and `support_x`, `support_y`, and `support` mimic the equivalent diameter properties on `OpticalPhase`.\n",
-    "\n",
-    "`show` and `show_fourier` behave the same way as `plot2d` methods found throughout `prysm`, except there are xlim and ylim parameters, which may be either single values, taken to be symmetric axis limits, or length-2 iterables of lower and upper limits.\n",
+    "Convolvable objects have a few convenience properties and methods. `slice_x` and its y variant exist and behave the same as slices on subclasses of `OpticalPhase` such as `Pupil` and `Interferogram`.  `shape` is a convenience wrapper for `.data.shape`, and `support_x`, `support_y`, and `support` mimic the equivalent diameter properties on `OpticalPhase`.\n",
     "\n",
     "Finally, `Convolvable` objects may be initialized from images,"
    ]
