--- a/docs/source/user_guide/PSFs.ipynb
+++ b/docs/source/user_guide/PSFs.ipynb
@@ -120,30 +120,21 @@
    "source": [
     "# ~0.838, exact value of energy contained in first airy zero\n",
     "from prysm.psf import FIRST_AIRY_ENCIRCLED\n",
-    "ps.plot2d(axlim=5*1.22*ps.wavelength*FIRST_AIRY_ENCIRCLED,\n",
-    "          power=2,\n",
-    "          interp_method='lanczos',\n",
-    "          pix_grid=1.12,\n",
+    "ps.plot2d(xlim=5*1.22*ps.wavelength*FIRST_AIRY_ENCIRCLED,\n",
+    "          power=1/2,\n",
+    "          interpolation='lanczos',\n",
     "          show_axlabels=True,\n",
-    "          show_colorbar=True,\n",
-    "          circle_ee=FIRST_AIRY_ENCIRCLED)"
+    "          show_colorbar=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both `plot_encircled_energy` and `plot2d` take the usual `fig` and `ax` kwargs as well. For `plot2d`, the `axlim` arg sets the x and y axis limits to symmetrical values of axlim, i.e. the limits above will be `[0.8, 0.8]`, `[0.8, 0.8]`. `power` controls the stretch of the color scale. The image will be stretched by the 1/power power, e.g. 2 plots psf^(1/2). `interp_method` is passed to matplotlib. `pix_grid` will use the minor axis ticks to draw a light grid over the PSF, intended to show the size of a PSF relative to the pixels of a detector. Units of microns. `show_axlabels` and `show_colorbar` both default to True, and control whether the axis labels are set and if the colorbar is drawn. `circle_ee` will draw a dashed circle at the radius containing the specified portion of the energy, and another at the diffraction limited radius for a circular aperture.\n",
+    "Both `plot_encircled_energy` and `plot2d` take the usual `fig` and `ax` kwargs as well. For `plot2d`, the `axlim` arg sets the x and y axis limits to symmetrical values of axlim, i.e. the limits above will be `[0.8, 0.8]`, `[0.8, 0.8]`. `power` controls the stretch of the color scale. The image will be stretched by the 1/power power, e.g. 2 plots psf^(1/2). `interpolation` is passed to matplotlib. `show_axlabels` and `show_colorbar` both default to True, and control whether the axis labels are set and if the colorbar is drawn.\n",
     "\n",
-    "PSFs are a subclass of Convolvable and inherit all methods and attributes."
+    "PSFs are a subclass of [Convolvable](./convolvables.ipynb) and inherit all methods and attributes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -162,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
