--- a/docs/source/user_guide/Interferograms.ipynb
+++ b/docs/source/user_guide/Interferograms.ipynb
@@ -37,16 +37,15 @@
    "source": [
     "x = y = np.arange(129)\n",
     "z = np.random.rand(128, 128)\n",
-    "interf = Interferogram(phase=z, intensity=None, x=x, y=y, meta=dict(), units=None, labels=None)\n",
-    "\n",
-    "interf.plot2d()"
+    "interf = Interferogram(phase=z, intensity=None, x=x, y=y, meta=dict(), xy_unit=None, z_unit=None, labels=None)\n",
+    "print(interf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`units` and `labels` have default values of `None` and control the units the data is in as well as the labels used for plotting.  For more information, see the documentation on [units and labels](./units-and-labels.html) meta is a dictionary to store metadata. Interferograms are usually created from Zygo dat files.  One is provided as a sample file:"
+    "`xy/z_units` and `labels` have default values of `None` and control the units the data is in as well as the labels used for plotting.  For more information, see the documentation on [units and labels](./units-and-labels.html) meta is a dictionary to store metadata. Interferograms are usually created from Zygo dat files.  One is provided as a sample file:"
    ]
   },
   {
@@ -345,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
