--- a/docs/source/user_guide/Zernikes.ipynb
+++ b/docs/source/user_guide/Zernikes.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from prysm import FringeZernike, NollZernike\n",
-    "p = FringeZernike(samples=123, dia=456.7, wavelength=1.0, opd_unit='nm', mask='dodecagon')"
+    "p = FringeZernike(samples=123, dia=456.7, wavelength=1.0, z_unit='nm', phase_mask='dodecagon')"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "p2 = FringeZernike(Z4=1, Z9=1, Z48=1, base=0, norm=True)\n",
-    "p2"
+    "print(p2)"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm._zernike import defocus"
+    "from prysm.zernike import defocus"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
